# FinSight

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: analyst.py  auditor.py  comparator.py  retriever.py  router.py  synthesizer.py
api/: main.py  metrics_store.py
api/middleware/: guardrails.py
api/routes/: eval.py  ingest.py  metrics.py  query.py  query_stream.py
api/static/: dashboard.html  index.html
core/: config.py  groq_client.py  models.py  sk_kernel.py  unit_normalizer.py
docs/: ARCHITECTURE.md  DECISIONS.md  FinSight_Documentation.tex  MEDIUM_ARTICLE.md
evaluation/: harness.py
evaluation/queries/: adversarial.json  happy_path.json
ingestion/: chunker.py  metadata.py  parser.py  pipeline.py
observability/: tracer.py
qdrant_storage/: raft_state.json
retrieval/: bm25.py  chunker.py  confidence.py  dummy_test.py  embedder.py  hybrid.py  qdrant_store.py  reranker.py
scripts/: download_filings.py
tests/: test_chunker.py  test_confidence.py  test_ingestion.py  test_models.py  test_retrieval.py  test_unit_normalizer.py
