[project]
name = "finsight"
version = "1.0.0"
description = "Regulatory-Grade Financial Intelligence System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.27.2",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "semantic-kernel>=1.14.0",
    "openai>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "groq>=0.9.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
